--- a/cat.html
+++ b/cat.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <p>how you doing?</p>
-<<<<<<< HEAD
-    
-=======
+
     <p>BIG CAT</p>
->>>>>>> dev
+
+
+
+    <div class="container">
+        You have to fix a probleb))
+    </div>
 </body>
 </html>
